--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="YVE8D3XPSA42G">
+<input type="hidden" name="hosted_button_id" value="G6EVT4UX9SGZU">
 <table>
-<tr><td><input type="hidden" name="on0" value="Down for me">Down for me</td></tr><tr><td><select name="os0">
-	<option value="Down 1">Down 1 €50,00 EUR</option>
-	<option value="Down 2">Down 2 €175,00 EUR</option>
-	<option value="Down 3">Down 3 €250,00 EUR</option>
-	<option value="Down 4">Down 4 €300,00 EUR</option>
-	<option value="Down 5">Down 5 €350,00 EUR</option>
-	<option value="Down 6">Down 6 €400,00 EUR</option>
-	<option value="Down 7">Down 7 €500,00 EUR</option>
-	<option value="Down 8">Down 8 €650,00 EUR</option>
-	<option value="Down 9">Down 9 €870,00 EUR</option>
-	<option value="Down 10">Down 10 €1 000,00 EUR</option>
+<tr><td><input type="hidden" name="on0" value=""></td></tr><tr><td><select name="os0">
+	<option value="Option 1">Option 1 : €150,00 EUR - mensuel</option>
+	<option value="Option 2">Option 2 : €250,00 EUR - mensuel</option>
+	<option value="Option 3">Option 3 : €300,00 EUR - mensuel</option>
+	<option value="Option 4">Option 4 : €400,00 EUR - mensuel</option>
+	<option value="Option 5">Option 5 : €500,00 EUR - mensuel</option>
+	<option value="Option 6">Option 6 : €600,00 EUR - mensuel</option>
+	<option value="Option 7">Option 7 : €700,00 EUR - mensuel</option>
+	<option value="Option 8">Option 8 : €800,00 EUR - mensuel</option>
+	<option value="Option 9">Option 9 : €900,00 EUR - mensuel</option>
+	<option value="Option 10">Option 10 : €1 000,00 EUR - mensuel</option>
 </select> </td></tr>
 </table>
 <input type="hidden" name="currency_code" value="EUR">
-<input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+<input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
 <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
 </form>
