--- a/index.html
+++ b/index.html
@@ -1,21 +1,15 @@
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="G6EVT4UX9SGZU">
+<input type="hidden" name="hosted_button_id" value="3EMHKDRF89DHA">
 <table>
-<tr><td><input type="hidden" name="on0" value=""></td></tr><tr><td><select name="os0">
-	<option value="Option 1">Option 1 : €25,00 EUR - mensuel</option>
-	<option value="Option 2">Option 2 : €250,00 EUR - mensuel</option>
-	<option value="Option 3">Option 3 : €300,00 EUR - mensuel</option>
-	<option value="Option 4">Option 4 : €400,00 EUR - mensuel</option>
-	<option value="Option 5">Option 5 : €500,00 EUR - mensuel</option>
-	<option value="Option 6">Option 6 : €600,00 EUR - mensuel</option>
-	<option value="Option 7">Option 7 : €700,00 EUR - mensuel</option>
-	<option value="Option 8">Option 8 : €800,00 EUR - mensuel</option>
-	<option value="Option 9">Option 9 : €900,00 EUR - mensuel</option>
-	<option value="Option 10">Option 10 : €1 000,00 EUR - mensuel</option>
+<tr><td><input type="hidden" name="on0" value="Préservatif">Préservatif</td></tr><tr><td><select name="os0">
+ <option value="Caporal kiki">Caporal kiki €25,00 EUR</option>
+ <option value="Capitaine chatte">Capitaine chatte €50,00 EUR</option>
+ <option value="Bébé zizi">Bébé zizi €100,00 EUR</option>
+ <option value="Trilogie zoulou">Trilogie zoulou €200,00 EUR</option>
 </select> </td></tr>
 </table>
 <input type="hidden" name="currency_code" value="EUR">
-<input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+<input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
 <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
 </form>
