--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="3EMHKDRF89DHA">
+<input type="hidden" name="hosted_button_id" value="L3RLTM5MCT9FG">
 <table>
-<tr><td><input type="hidden" name="on0" value="Préservatif">Préservatif</td></tr><tr><td><select name="os0">
- <option value="Caporal kiki">Caporal kiki €25,00 EUR</option>
- <option value="Capitaine chatte">Capitaine chatte €50,00 EUR</option>
- <option value="Bébé zizi">Bébé zizi €100,00 EUR</option>
- <option value="Trilogie zoulou">Trilogie zoulou €200,00 EUR</option>
+<tr><td><input type="hidden" name="on0" value="Line">Line</td></tr><tr><td><select name="os0">
+ <option value="Option 1">Option 1 €25,00 EUR</option>
+ <option value="Option 2">Option 2 €50,00 EUR</option>
+ <option value="Option 3">Option 3 €100,00 EUR</option>
+ <option value="Option 4">Option 4 €200,00 EUR</option>
 </select> </td></tr>
 </table>
 <input type="hidden" name="currency_code" value="EUR">
